--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </div>
         <div class ="row maincontent p-0">
             <div class = "col-4 playBox1">
+                <div class = "p1-name">
+
+                </div>
                 <button class ="rock">Rock</button>
                 <button>paper</button>
                 <button>scissors</button>
@@ -34,21 +37,21 @@
 
             </div>
             <div class ="col-4 playBox2">
+                    <div class = "p2-name">
+
+                    </div>
                 <button>Rock</button>
                 <button>paper</button>
                 <button>scissors</button>
             </div>
         </div>
         <div class="row chatBox p-0">
-            <ul>
-                
-            </ul>
 
         </div>
-        <form class = " row messege custom-radio custom-control-inline">
-                <label for="messege-input"></label>
-                <input type="text" autocomplete="off" id="messege-input">
-                <input  class = "btn btn-info enter-messege" type="submit" value="Enter">
+        <form class = " row message custom-radio custom-control-inline">
+                <label for="message-input"></label>
+                <input type="text" autocomplete="off" id="message-input">
+                <input  class = "btn btn-info enter-message" type="submit" value="Enter">
         </form>
         </div>
               
