--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <h2>Win: <span class = "win1"></span></h2>
                         
                                 <div>
-                                    <h2>Loss:<span class = "loss1"></span></h2>
+                                    <h2>Loss:<span class = "lose1"></span></h2>
                                 </div>
                                     <div>
                                         <h2>Tie:<span class = "tie1"></span></h2>
@@ -47,7 +47,7 @@
                         <div class ="col pickP1">
                             <button class ="rock" value="rock">Rock</button>
                             <button class ="paper" value= "paper">paper</button>
-                            <button class ="scissor" value = "scissors">scissors</button>
+                            <button class ="scissors" value = "scissors">scissors</button>
                         </div>
                     </div>   
             </div>
@@ -64,7 +64,7 @@
                                     <h2>Win: <span class = "win2"></span></h2>
                             
                                     <div>
-                                        <h2>Loss:<span class = "loss2"></span></h2>
+                                        <h2>Loss:<span class = "lose2"></span></h2>
                                     </div>
                                         <div>
                                             <h2>Tie:<span class = "Tie2"></span></h2>
@@ -77,7 +77,7 @@
                             <div class ="col pickP2">
                                 <button class = "rock2" value="rock">Rock</button>
                                 <button class = "paper2" value="paper">paper</button>
-                                <button class = "scissors2" value="scissor">scissors</button>
+                                <button class = "scissors2" value="scissors">scissors</button>
                             </div>
                         </div>   
                     </div>
