--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </div>
                     <div class ="row">
                         <div class ="col pickP1">
-                            <button class ="rock" value="rock">Rock</button>
-                            <button class ="paper" value= "paper">paper</button>
-                            <button class ="scissors" value = "scissors">scissors</button>
+                            <button class ="rock btn btn-warning" value="rock">Rock</button>
+                            <button class ="paper btn btn-warning" value= "paper">paper</button>
+                            <button class ="scissors btn btn-warning" value = "scissors">scissors</button>
                         </div>
                     </div>   
             </div>
@@ -75,9 +75,9 @@
                         </div>
                         <div class ="row">
                             <div class ="col pickP2">
-                                <button class = "rock2" value="rock">Rock</button>
-                                <button class = "paper2" value="paper">paper</button>
-                                <button class = "scissors2" value="scissors">scissors</button>
+                                <button class = "rock2 btn btn-warning" value="rock">Rock</button>
+                                <button class = "paper2 btn btn-warning" value="paper">paper</button>
+                                <button class = "scissors2 btn btn-warning" value="scissors">scissors</button>
                             </div>
                         </div>   
                     </div>
